# backtest-engine-python

./: .gitignore  README.md  alternating_strategy.py  analyze_backtest.py  backtest_analysis.txt  buy_and_hold_strategy.py  pyproject.toml  run_backtest.py  test_multi_symbol_support.py  user.py  visualize_backtest.py
market_sdk/: data_provider.py  exporter.py
my_strategies/: buy_and_hold_strategy.py  simple_buy_strategy.py
simple_broker/: broker.py  engine.py  models.py  moving_average_strategy.py  portfolio.py  strategy.py
simple_broker/models/: candle.py  order_intent.py  portfolio_snapshot.py  positions.py  symbol.py
src/: main_user.py
src/trade_tp/: engine.py  runner.py
src/trade_tp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trade_tp/backtest_engine/: broker.py  engine.py  portfolio.py
src/trade_tp/backtest_engine/analysis/: report.py
src/trade_tp/backtest_engine/broker/: broker.py  liquidation.py  validator.py
src/trade_tp/backtest_engine/entities/: candle.py  order_intent.py  portfolio_snapshot.py  position.py
src/trade_tp/backtest_engine/models/: candle.py  order_intent.py  portfolio_snapshot.py  positions.py  strategy.py  symbol.py  trade.py
src/trade_tp/backtest_engine/portfolio/: portfolio.py  simulator.py
src/trade_tp/backtest_engine/strategy/: context.py
src/trade_tp/data/backtest_data_analysis/: analysis.py  report.py
src/trade_tp/data/backtest_data_analysis/utils/: format_money.py  write_global_portfolio_section.py  write_header.py  write_key_value.py  write_line.py  write_per_symbol_table.py  write_summary_header.py
src/trade_tp/data/simulated_market_data/: data_provider.py
src/trade_tp/remote/: client.py  exporter.py  exporters.py  importers.py  provider.py  runner.py
src/trade_tp/runners/: local_runner.py  remote_runner.py
src/trade_tp/sdk/: client.py  data_provider.py  schemas.py
src/trade_tp/simple_broker/: broker.py  portfolio.py
src/trade_tp/simple_broker/models/: candle.py  enums.py  order_intent.py  portfolio_snapshot.py  positions.py  strategy.py  symbol.py  trade.py
src/trade_tp/simulated_market_data/: data_provider.py
strategy/: buy_and_hold_strategy.py  moving_average_crossover_strategy.py
tests/: test_long_short_positions.py
