[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade_tp"
version = "0.1.0"
description = "Lightweight backtest engine and broker simulator for trading strategies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Arthur Hottier" }
]
keywords = ["backtest", "trading", "finance", "algorithmic-trading"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial"
]
dependencies = [
  "tqdm>=4.0",
  "requests>=2.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "isort"]

[project.urls]
Homepage = "https://github.com/ArthurHtr/backtest-engine-python"
Source = "https://github.com/ArthurHtr/backtest-engine-python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
