[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-tp"
version = "0.1.0"
description = "A Python backtesting engine for trading strategies"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Arthur Hottier"} 
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/arthur-hottier/trading-plateform"
